# autonomous_vehicle

./: README.md
log/: latest_list
src/: README.md
src/audibot/: CMakeLists.txt
src/audibot_description/urdf/: audibot.urdf.xacro
src/audibot_gazebo/launch/: audibot_robot.launch.py  single_vehicle_example.launch.py
src/audibot_gazebo/rviz/: single_vehicle_example.rviz
src/aws-robomaker-racetrack-world/: CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml
src/aws-robomaker-racetrack-world/launch/: view_racetrack.launch.py
src/aws-robomaker-racetrack-world/models/aws_robomaker_racetrack_Archway_01/: model.sdf
src/aws-robomaker-racetrack-world/models/aws_robomaker_racetrack_Billboard_01/: model.sdf
src/aws-robomaker-racetrack-world/models/aws_robomaker_racetrack_Column_01/: model.sdf
src/aws-robomaker-racetrack-world/models/aws_robomaker_racetrack_CrashworthBucket_01/: model.sdf
src/aws-robomaker-racetrack-world/models/aws_robomaker_racetrack_FenceMesh_01/: model.sdf
src/aws-robomaker-racetrack-world/models/aws_robomaker_racetrack_Fence_01/: model.sdf
src/aws-robomaker-racetrack-world/models/aws_robomaker_racetrack_Fence_02/: model.sdf
src/aws-robomaker-racetrack-world/models/aws_robomaker_racetrack_Ground_01/: model.sdf
src/aws-robomaker-racetrack-world/models/aws_robomaker_racetrack_Light_01/: model.sdf
src/aws-robomaker-racetrack-world/models/aws_robomaker_racetrack_RaceStartLight_01/: model.sdf
src/aws-robomaker-racetrack-world/models/aws_robomaker_racetrack_StonePier_01/: model.sdf
src/aws-robomaker-racetrack-world/models/aws_robomaker_racetrack_StopSign_01/: model.sdf
src/aws-robomaker-racetrack-world/models/aws_robomaker_racetrack_Track_01/: model.sdf
src/aws-robomaker-racetrack-world/models/aws_robomaker_racetrack_Track_02/: model.sdf
src/aws-robomaker-racetrack-world/models/aws_robomaker_racetrack_Track_03/: model.sdf
src/aws-robomaker-racetrack-world/models/aws_robomaker_racetrack_Track_04/: model.sdf
src/aws-robomaker-racetrack-world/models/aws_robomaker_racetrack_Track_05/: model.sdf
src/aws-robomaker-racetrack-world/models/aws_robomaker_racetrack_Trackline_01/: model.sdf
src/aws-robomaker-racetrack-world/models/aws_robomaker_racetrack_TrafficCone_01/: model.sdf
src/aws-robomaker-racetrack-world/models/aws_robomaker_racetrack_Wall_01/: model.sdf
src/aws-robomaker-racetrack-world/worlds/: racetrack_day_empty_not.world  racetrack_day_sdf.world
src/aws_audibot/: package.xml  setup.cfg  setup.py
src/aws_audibot/aws_audibot/: __init__.py
src/aws_audibot/launch/: aws_audibot.launch.py  train_ddqn_with_track.launch.py
src/aws_audibot_controller/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/aws_audibot_controller/aws_audibot_controller/: keyboard_control.py
src/aws_audibot_controller/launch/: keyboard_control_launch.py
src/ddqn_audibot/: package.xml  setup.cfg  setup.py
src/ddqn_audibot/ddqn_audibot/: __init__.py  ddqn_agent.py  train_ddqn.py
src/ddqn_audibot/launch/: train_ddqn_launch.py
