cmake_minimum_required(VERSION 3.5)
project(audibot)
find_package(ament_cmake REQUIRED)
ament_package()
# cmake_minimum_required(VERSION 3.5)
# project(audibot)
# find_package(ament_cmake REQUIRED)
# install(
#   DIRECTORY scripts/
#   DESTINATION lib/${PROJECT_NAME}
#   USE_SOURCE_PERMISSIONS
# )
# ament_package()